//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Store {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  latitude Int [not null]
  longitude Int [not null]
  name String [not null]
  img String
  menus StoresOnMenus [not null]
}

Table StoresOnMenus {
  store Store [not null]
  storeId Int [not null]
  menu Menu [not null]
  menuId Int [not null]
  isActive Boolean [not null]

  indexes {
    (storeId, menuId) [pk]
  }
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String [note: '苗字']
  role Role [not null]
}

Table Detail {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  img String [not null]
  price Int [not null]
  sentence String [not null]
  menu Menu
  options DetailOnOption [not null]

  Note: '商品詳細ページ'
}

Table Menu {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  img String [not null]
  detail Detail
  detailId Int [unique, note: '商品詳細ページ']
  category String [not null]
  stores StoresOnMenus [not null]
}

Table Option {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  details DetailOnOption [not null]
}

Table DetailOnOption {
  option Option [not null]
  optionId Int [not null]
  detail Detail [not null]
  detailId Int [not null]
  assignedAt DateTime [default: `now()`, not null]
  assignedBy String [not null]

  indexes {
    (optionId, detailId) [pk]
  }
}

Enum Role {
  ADMIN
  USER
}

Ref: StoresOnMenus.storeId > Store.id

Ref: StoresOnMenus.menuId > Menu.id

Ref: Menu.detailId - Detail.id

Ref: DetailOnOption.optionId > Option.id

Ref: DetailOnOption.detailId > Detail.id